fix: page overflowing
The home image div was overflowing page width. The div it's a flexbox,
so the min width was set by auto. Change to 0 and make the flex items
shrink.

--- a/styles/style.css
+++ b/styles/style.css
@@ -73,10 +73,13 @@ ul{
     background-color: transparent;
     border-radius: 2px;
     display: flex;
+    min-width: 0;
+    justify-content: center;
 }
 #perf-image{
     border-radius: 10%;
     border: thin solid #3882F6;
+    min-width: 0;
 }
 .home-footer{
     align-self: center;
